# starter

./: .gitignore  CMakeLists.txt  Makefile  create_new.sh
app/: CMakeLists.txt
app/src/: main.cpp
